// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<div>
  <div
    class="pf-v6-c-check pf-m-standalone ins-c-bulk-select"
  >
    <input
      aria-invalid="false"
      aria-label="Select all"
      class="pf-v6-c-check__input"
      data-ouia-component-id="BulkSelect"
      data-ouia-component-type="PF6/Checkbox"
      data-ouia-safe="true"
      id="undefined-checkbox"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`BulkSelect should render correctly - null checked 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="BulkSelect"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render correctly 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="BulkSelect"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="some-id-toggle-checkbox"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="pf-v6-c-check__label"
          id="some-id-toggle-checkbox"
        >
          30 selected
        </span>
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render correctly 2`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="BulkSelect"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render custom props 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="BulkSelect"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
